# scienteer

./: Cargo.toml  README.md
assets/: prompts.md
src/: background.rs  constants.rs  enemy.rs  main.rs  movement.rs  player.rs  projectile.rs
