[package]
name = "scienteer"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.12"  # Latest stable version
bevy_pixel_camera = "0.12"  # For pixel-perfect rendering

# Enable optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
